--- a/style.css
+++ b/style.css
@@ -7,3 +7,11 @@
 body {
     font-family: 'Comfortaa', cursive;
 }
+
+.container {
+    width: 95%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
